--- a/src/components/grid/grid.module.scss
+++ b/src/components/grid/grid.module.scss
@@ -1,6 +1,7 @@
 .root {
     display: grid;
-    grid-template-rows: 1fr 1fr 1fr;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
     gap: 5px;
+    grid-auto-flow: row;
 }
