--- a/src/components/new-component/new-component.module.scss
+++ b/src/components/new-component/new-component.module.scss
@@ -1,9 +1,17 @@
-.root {
+.grid {
     display: grid;
     grid-template-rows: 1fr 1fr;
     grid-template-columns: 1fr 1fr;
     gap: 20px;
-    grid-auto-flow: row;
+    width: 100%;
+    height: 100%;
+    margin: 0em;
+}
+
+.area {
+    grid-row-start: 1;
+    align-self: center;
+    grid-row-end: 3;
     width: 100%;
     height: 100%;
 }
