--- a/src/_codux/component-templates/stack/new-component.module.scss
+++ b/src/_codux/component-templates/stack/new-component.module.scss
@@ -3,13 +3,20 @@
     grid-template-rows: 1fr 1fr;
     grid-template-columns: 1fr 1fr;
     gap: 20px;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     margin: 0em;
 }
 
 .area {
     grid-row-start: 1;
-    align-self: center;
     grid-row-end: 3;
+    align-self: center;
+    width: 100%;
+    height: 100%;
+}
+
+.img {
+    width: 100%;
+    height: 100%;
 }
