--- a/src/_codux/component-templates/stack/new-component.module.scss
+++ b/src/_codux/component-templates/stack/new-component.module.scss
@@ -1,17 +1,14 @@
-.grid {
-    display: grid;
-    grid-template-rows: 1fr 1fr;
-    grid-template-columns: 1fr 1fr;
+.root {
+    display: flex;
+    flex-direction: row; 
     gap: 20px;
-    margin: 0em;
 }
 
-.area {
-    grid-row-start: 1;
-    grid-row-end: 3;
-    align-self: center;
-    width: 100%;
-    height: 100%;
+.section {
+    display: flex;
+    flex-direction: column; 
+    align-content: center;
+    gap: 20px;
 }
 
 .img {
